test/cgip/PP/error/inheritance/rep/reperr-26.err105
"Line 56 column 15
258: Construct is multiple defined within the current scope"
